<resources>
    <string name="app_name">Sport Market</string>
    <string name="login">Login</string>
    <string name="signin">Sign in</string>
    <string name="ServerIP">185.94.99.134</string>
    <string name="ServerPort">5001</string>
    <string name="title_activity_login">Login …</string>
    <string name="default_color">#A61744</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Signin</string>
    <string name="action_sign_in_short">Signin</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="prompt_user_name">User Name</string>
    <string name="action_login">Login</string>
    <string name="title_activity_signin">Welcome …</string>
    <string name="large_text">Material is the metaphor.</string>
    <string name="action_settings">Settings</string>
    <string name="name">Full Name</string>
    <string name="address">Address</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="create_account">Create Account</string>
    <string name="already_a_member_login">Already a member? Login</string>
    <string name="reprompt_password">Password Again</string>
    <string name="user_name">User Name</string>
    <string name="creating_account">Creating Account…</string>
    <string name="at_least_3_chars">at least 3 characters</string>
    <string name="invalid_email">Enter Valid Email</string>
    <string name="invalid_address">Enter Valid Address</string>
    <string name="invalid_mobile">Enter Valid Mobile Number</string>
    <string name="invalid_signin_password">between 4 and 10 alphanumeric characters</string>
    <string name="invalid_signin_reenter_password">Password Do not match</string>
    <string name="could_not_create_user">Could not create user.</string>
    <string name="consumer">Consumer</string>
    <string name="producer">Producer</string>
    <string name="title_activity_select_consumer_package">Select ...</string>
    <string name="free_package">Free Package</string>
    <string name="silver_package">Silver Package</string>
    <string name="golden_package">Golden Package</string>
    <string name="free_package_description">It\'s free one.</string>
    <string name="silver_package_description">It\'s silver package.</string>
    <string name="golden_package_description">It\'s golden package.</string>
    <string name="agree_to_term_of_use_content">Agree to term of use</string>
    <string name="term_of_use_of_software_to_agree_with">It\'s term of use of software to agree with.</string>
    <string name="agree_and_continue">Continue to Register</string>
    <string name="consumer_division">Consumer Division</string>
    <string name="producer_division">Producer Division</string>
    <string name="producer_division_name">Producer Division Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="national_code">National Code</string>
    <string name="producer_product_name">Name</string>
    <string name="producer_product_price">Price</string>
    <string name="producer_product_category">Category</string>
    <string name="acquire_product_image">Acquire Product Image</string>
    <string name="select_product_colors">Select Product Colors</string>
    <string name="producer_product_sizes">Sizes</string>
    <string name="producer_product_brands">Brands</string>
    <string name="producer_product_counter">Counter</string>
    <string name="producer_product_age_category">Age Category</string>
    <string name="producer_product_gender">Gender</string>
    <string name="producer_product_comment">Comment</string>
    <string name="producer_product_retail_type">Retail Type</string>
    <string name="producer_product_wholesale_type">Wholesale Type</string>
    <string name="title_activity_producer_main">Producer ....</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="home">Home</string>
    <string name="retail_purchase">Retail Purchase</string>
    <string name="wholesale_purchase">Wholesale Purchase</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="eula">End User License Agreement</string>
    <string name="title_activity_consumer_main">Consumer ....</string>
    <string name="products_categories">Products Categories</string>
    <string name="transactions">Transactions</string>
    <string name="user_not_found">User not found.</string>
    <string name="welcometext">Welcome %s</string>
    <string name="exit">Application Exit</string>
    <string name="click_back_again_to_eit">Please click BACK again to exit</string>
    <string name="invalid_national_code">National code is invalid.</string>
    <string name="invalid_phone">Phone is not valid.</string>
    <string name="invalid_producer_division">Producer division category is not valid.</string>
    <string name="invalid_producer_division_name">Producer division name is not valid.</string>
    <string name="signup_failed">Signup failed</string>
    <string name="product">Product ...</string>
    <string name="title_actitvity_producer_product">Product ...</string>
    <string name="pref_locale">fa</string>
    <string name="crash_toast_text">Sorry, app crashed.</string>
    <string name="production_package_not_selected">Production package is not selected.</string>
    <string name="about_us">About us</string>
    <string name="button">Button</string>
    <string name="user">User</string>
    <string name="add_product">Add Product</string>
    <string name="invalid_product_name">Invalid Product Name</string>
    <string name="invalid_product_price">Invalid Product Price</string>
    <string name="invalid_product_category">Invalid Product Category</string>
    <string name="invalid_product_sizes">Invalid Product Sizes</string>
    <string name="invalid_product_brands">Invalid Product Brands</string>
    <string name="invalid_product_counter">Invalid Product Counter</string>
    <string name="invalid_product_age_category">Invalid Product Age Category</string>
    <string name="invalid_product_gender">Invalid Product Gender</string>
    <string name="could_not_create_product">Could not create product.</string>
    <string name="create_product_failed">Product creation failed duo to error: %s.</string>
    <string name="creating_product">Creating Product</string>
    <string name="select_your_image">Select your image:</string>
    <string name="ok">Ok</string>
    <string name="pref_name">Pick a color</string>
    <string name="pref_summary">Dialog Preference with Color Picker.</string>
    <string name="create_product_succeeded">Product creation succeeded.</string>
    <string name="processing_image_error">Processing image error: %s</string>
    <string name="logout">User Logout</string>
    <string name="product_search">Product Search</string>
    <string name="advanced_product_search">Advanced Product Search</string>
    <string name="load_products_another_page">Load Another Products Page</string>
    <string name="could_not_search_product">Could not search products.</string>
    <string name="quantity_out_of_range">Quantity is out of range</string>
    <string name="cart_products_purchase">Purchase</string>
    <string name="acvtivation_email_sent">Activation email has been sent.</string>
    <string name="buy">Buy</string>
    <string name="invoice">Invoice</string>
    <string name="invoice_date">Invoice Date</string>
    <string name="invoices_search">Invoices Search</string>
    <string name="load_invoices_another_page">Load more ...</string>
    <string name="http_www_sportmagazine_ir"><a href="http://www.sportmagazine.ir">www.sportmagazine.ir</a></string>
    <string name="separation_hint">Consider separating with dash or comma.</string>
    <string name="forgot_password">Forgot Password? Click here ...</string>
    <string name="change_password_code_recieve">Recieve Security Code</string>
    <string name="security_code">Security Code</string>
    <string name="change_password">Change Password</string>
    <string name="could_not_change_password">Could not change password.</string>
    <string name="invalid_security_code">Security code is invalid.</string>
    <string name="security_code_sent">Security code to change password has been sent.</string>
    <string name="failed_due_error">Failed dur to error: %s</string>
    <string name="password_changed">Password has been changed.</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_header_general">General</string>
    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>
    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>
    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>
    <string name="pref_header_data_sync">Data &amp; sync</string>
    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>
    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>
    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string-array name="multi_select_list_preference_default_value" />
    <string name="pref_title_system_sync_settings">System sync settings</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_new_message_notifications">New message notifications</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_relative_layout">RelativeLayout</string>
    <string name="title_activity_table_layout">TableLayout</string>
    <string name="sign_in">Sign In &#8230;</string>
    <string name="email">Email</string>
    <string name="jogging">Jogging</string>
    <string name="swimming">Swimming</string>
    <string name="coding">Coding</string>
    <string name="writing">Writing</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="wifi_on">WiFi On</string>
    <string name="wifi_off">WiFi Off</string>
</resources>