<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/producer_nav_home"
            android:icon="@drawable/home"
            android:title="@string/home" />
        <item
            android:id="@+id/producer_nav_retail_purchase"
            android:icon="@drawable/retail"
            android:title="@string/retail_purchase" />
        <item
            android:id="@+id/producer_nav_wholesale_purchase"
            android:icon="@drawable/wholesale"
            android:title="@string/wholesale_purchase" />
        <item
            android:id="@+id/producer_nav_profile"
            android:icon="@drawable/user"
            android:title="@string/profile" />
        <item
            android:id="@+id/producer_nav_settings"
            android:icon="@drawable/settings"
            android:title="@string/settings" />
        <item
            android:id="@+id/producer_nav_about"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/about" />
        <item
            android:id="@+id/producer_nav_eula"
            android:icon="@drawable/eula"
            android:title="@string/eula" />
    </group>
</menu>
