<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/consumer_nav_home"
            android:icon="@drawable/home"
            android:title="@string/home" />
        <item
            android:id="@+id/consumer_nav_products_categories"
            android:icon="@drawable/organization"
            android:title="@string/products_categories" />
        <item
            android:id="@+id/consumer_nav_transactions"
            android:icon="@drawable/transactions"
            android:title="@string/transactions" />
        <item
            android:id="@+id/consumer_nav_settings"
            android:icon="@drawable/settings"
            android:title="@string/settings" />
        <item
            android:id="@+id/consumer_nav_about"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/about" />
    </group>

</menu>
